--- a/css/archivo.html
+++ b/css/archivo.html
@@ -49,12 +49,12 @@
     <li><a href="http://www.moscow.com/business-directory-2/">Moscow ID</li>
  
      <marquee>Subscribe to our Newsletter to get daily specials emailed to you directly!!</marquee>
- <div id="footer">
+        <footer> 
+            <p>Copyright -C- 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </p class="smaller">
+        </footer>
   <p>To find out more, contact Bobby at 4455.
  </p></div>
- <div id="footer">
-  <p>Copyright -C- 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </p class="smaller">
- </div>
+ 
 
 </div>
 </body>
