--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <ul>
       <li>Asignacion 1:<a href="asignaciones/asignacion1/plansite.pdf">Site Plan</a></li>
       <li>Asignacion 2:<a href="asignaciones/asignacion2/fixed.html">HTML Markup Validation</a></li>
-      <li>Asignacion 10:<a href="asignaciones/asignacion8/places.json">HTML Markup Validation</a></li>
+      <li>Asignacion 8:<a href="asignaciones/asignacion8/json.html">Ejemplo JSON</a></li>
+      <li>Asignacion 9:<a href="asignaciones/asignacion8/places.json">Asignacion Json</a></li>
 
     </ul>
     
