--- a/asignaciones/asignacion11/Examen/cbba.html
+++ b/asignaciones/asignacion11/Examen/cbba.html
@@ -6,22 +6,26 @@
 	initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Bolivia Turistica</title>
 	<meta name="description" content="Assignment for exam web thecnology">
-	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
+	<link rel="stylesheet" href="css/large.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/small.css">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	
 </head>
 <body>
 
 	<div>
 		<header>
-			<div> 
-				<img src="images/logo.png" alt="Logo">
+			<div class="container_home"> 
+				<img src="images/logo.png" alt="Logo" width="100">
 				<div>
 						<h2>Bolivia Tusritica</h2>
 						<p>Conoce el mejor lugar  del mundo</p>
 				</div>
 			</div>
 
-			<nav class="navigation">
+			<nav class="container_home">
 				<a href="#" onclick="toggleMenu()">&#9776; Menu</a>				
                 <a href="#">Inicio</a>
                 <a href="#">La Paz</a>	
@@ -36,7 +40,7 @@
 			<h1>Cochabamba</h1>
 			<div>
 				<picture>
-					<img  src="images/cochabamba.jpg" alt="Cochabamba">
+					<img  src="images/cochabamba.jpg" alt="Cochabamba" width="200%">
 			 	</picture>			
 					<div>
 							<h3>Informacion del clima</h3>
@@ -62,7 +66,7 @@
 						</div>
 						
 			</div>
-			<div >
+			<div>
 				<h3>5 Day Forecast</h3>
 				<table>
 					<tr>            
@@ -90,7 +94,7 @@
 					  <p>Informacion Metereologia:  <a href="https://openweathermap.org/" target=_blank> Open Weather Map </a></p>
 					</div>
 			
-			<div>
+			<div class="contact">
 			
 				<article>					
 					<h2>Conoce Cochabamba</h2>
@@ -98,7 +102,7 @@
 					<img src="images/cocha1.jpg" alt="Preston Town">
 
                     <p>Cochabamba es una ciudad del centro de Bolivia. Un teleférico que parte desde una colina situada en el este lleva a la enorme estatua del Cristo de la Concordia, que ofrece vistas a la zona circundante. En el centro de la ciudad se encuentra la plaza 14 de Septiembre, una plaza colonial rodeada de pórticos, y la catedral de San Sebastián, de estilo barroco andino. En las proximidades hay varias iglesias coloniales, como la de Santo Domingo, que destaca por su llamativa fachada de piedra tallada.</p>
-                    <p>Se encuentra enclavada en un valle de tierras fértiles en la zona central del país, en la región sub-andina. Se asienta al pie de la Cordillera Tunari, donde está el cerro Tunari, que es el punto más alto del departamento de Cochabamba (5,035 msnm). Por en medio de la ciudad cruza el Río Rocha de noreste a suroeste. Con una altitud promedio de 2570, la ciudad se puede jactar de un excelente clima.</p>
+                    
                 </article>	
 			</div>
 			<div class="contact">
