--- a/asignaciones/asignacion8/tutorialjson.html
+++ b/asignaciones/asignacion8/tutorialjson.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Json Example</title>
+    <link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet"> 
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+
+      <header>
+
+      </header>
+
+      <section>
+
+      </section>
+
+    <script>
 		/*header and setion elements and store them in variables*/
         var header = document.querySelector('header');
         var section = document.querySelector('section');
@@ -58,3 +78,7 @@
 			
             }
         }
+        
+    </script>
+  </body>
+</html>
