--- a/asignaciones/asignacion11/cochabamba.html
+++ b/asignaciones/asignacion11/cochabamba.html
@@ -49,7 +49,7 @@
 								</tr>
 								<tr>            
 								  <td>Temperatura Maxima:</td>
-								  <td><span id="temperature"></span> &deg;F</td>
+								  <td><span id="temperature"></span> &deg;C</td>
 								</tr>
 								<tr>            
 								  <td>Humedad:</td>
@@ -60,7 +60,7 @@
 									<td><span id="wind-speed"></span> mph</td>
 								</tr>
 								<tr>            
-								   <td>Wind Chill:</td>
+								   <td>Vientos:</td>
 								   <td><span id="chill"></span> &deg;F</td>
 								</tr>
 			
