--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <li>Asignacion 2:<a href="asignaciones/asignacion2/fixed.html">HTML Markup Validation</a></li>
       <li>Asignacion 8:<a href="asignaciones/asignacion8/json.html">Ejemplo JSON</a></li>
       <li>Asignacion 9:<a href="asignaciones/asignacion8/places.json">Asignacion Json</a></li>
+      <li>Info json:<a href="asignaciones/asignacion1/towndata.json"> Json</a></li>
+      
 
     </ul>
     
