--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li>Asignacion 8:<a href="asignaciones/asignacion8/json.html">Ejemplo JSON</a></li>
       <li>Asignacion 9:<a href="asignaciones/asignacion8/places.json">Asignacion Json</a></li>
       <li>Info json:<a href="asignaciones/asignacion1/towndata.json"> Json</a></li>
+      <li>Prueba:<a href="asignaciones/asignacion11/cochabamba.html"> cochabmaba</a></li>
       
 
     </ul>
